fix different spacing between allocated and unallocated shards

--- a/css/kopf.css
+++ b/css/kopf.css
@@ -494,7 +494,7 @@ html,body {
 	vertical-align: middle;
 	text-align: center;
 	line-height: 20px;
-	margin-left: 5px;
+	margin-left: 3px;
 	margin-bottom: 5px;
 	opacity: 0.6;
 }
